--- a/templates/product_list.html
+++ b/templates/product_list.html
@@ -1,19 +1,28 @@
-<!-- shop/templates/product_list.html -->
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block content %}
-<div class="container">
-    <h1>Products</h1>
-    <ul class="product-list">
-        {% for product in object_list %}
-        <li class="product">
-            <h2>{{ product.name }}</h2>
-            <p>{{ product.description }}</p>
-            <p class="price">${{ product.price }}</p>
-        </li>
-        {% empty %}
-        <li>No products available</li>
-        {% endfor %}
-    </ul>
-</div>
-{% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Product lists</title>
+</head>
+
+<body>
+    <div class="container">
+        <h1>Products</h1>
+        <ul class="product-list">
+            {% for product in object_list %}
+            <li class="product">
+                <h2>{{ product.name }}</h2>
+                <p>{{ product.description }}</p>
+                <p class="price">${{ product.price }}</p>
+            </li>
+            {% empty %}
+            <li>No products available</li>
+            {% endfor %}
+        </ul>
+    </div>
+</body>
+
+</html>
