--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Shopping Website</title>
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+</head>
+
+<body>
+
+</body>
+
+</html>
+
+<!-- <!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>My Shopping Website</title>
 </head>
 
 <body>
@@ -14,4 +27,4 @@
     {% endblock %}
 </body>
 
-</html>
+</html> -->
